src/test/vm/redeclared_function.php.exp
HipHop Fatal error: Function already defined: f in src/test/vm/redeclared_function.php on line 6
